# tinyvecdb

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ENV_SETUP.md  README.md  examples.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tinyvecdb_plan.md
.github/workflows/: ci.yml  publish.yml  security.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
ENV_SETUP/: index.html
api/: config.md  core.md  encryption.md
api/async/: index.html
api/config/: index.html
api/core/: index.html
api/embeddings/: index.html
api/encryption/: index.html
api/engine/catalog/: index.html
api/engine/quantization/: index.html
api/engine/search/: index.html
api/integrations/: index.html
benchmarks/: index.html
docs/: ENV_SETUP.md  benchmarks.md  index.md
docs/api/: core.md  embeddings.md
examples/: auto_embed.py  index.html  quant_benchmark.py  smoke_test.py
examples/embeddings/: perf_benchmark.py
examples/rag/: langchain_rag.ipynb  llama_rag.ipynb  ollama_rag.ipynb
exploration/: basic_demo.py  benchmark.py  sqlite-vec_exploration.ipynb
src/simplevecdb/: __init__.py  async_core.py  constants.py  core.py  encryption.py  quantization.py  search.py  types.py
src/simplevecdb/engine/: catalog.py  search.py  usearch_index.py
src/simplevecdb/integrations/: langchain.py
src/tinyvecdb/: __init__.py  config.py  core.py  types.py  utils.py
src/tinyvecdb/embeddings/: models.py  server.py
src/tinyvecdb/integrations/: __init__.py  langchain.py  llamaindex.py
tests/: conftest.py
tests/integration/: test_langchain.py  test_llamaindex.py  test_rag.py  test_server.py  test_v21_features.py
tests/perf/: test_performance.py
tests/unit/: test_config.py  test_core.py  test_encryption.py  test_multi_collection.py  test_search.py  test_types.py  test_utils.py
tests/unit/core/: test_brute_force.py  test_core_additional_coverage.py  test_filters.py  test_initialization.py  test_quantization.py  test_similarity_search.py
tests/unit/embeddings/: test_models.py  test_server.py
tests/unit/integrations/: test_langchain_coverage.py  test_llamaindex_coverage.py
