[project]
name = "tinyvecdb"
version = "0.1.0"
description = "TinyVecDB is a lightweight Python wrapper around SQLite and the sqlite-vec extension, providing a dead-simple API for local vector storage and similarity search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "jupyterlab>=4.4.10",
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "sentence-transformers>=5.1.2",
    "sqlite-vec>=0.1.6",
    "uvicorn[standard]>=0.38.0",
]
