[project]
name = "tinyvecdb"
version = "0.0.1"
description = "Dead-simple local vector database powered by sqlite-vec."
authors = [{ name = "Dayton Dunbar", email = "coderdayton14@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "sqlite-vec>=0.1.2",
    "numpy>=2.0",
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "jupyterlab",
    "sentence-transformers",
    "langchain-core>=1.0.7",
    "llama-index>=0.14.8",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-llms-openai-like>=0.5.3",
    "langchain-openai>=1.0.3",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sentence-transformers>=3.1",
    "torch>=2.5.0, <3.0.0",
]
dev = ["pytest>=8.0", "pytest-cov", "jupyterlab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tinyvecdb-server = "tinyvecdb.embeddings.server:run_server"
